--- a/playbooks/puppetmaster.yml
+++ b/playbooks/puppetmaster.yml
@@ -7,14 +7,14 @@
   tags: puppet
   become: true
   become_user: root
-  pre_tasks:
-    - name: Check puppet env presence
-      stat:
-        path="{{puppet_code_dir}}/environments/{{puppet_environment}}"
-      register: puppet_env_dir
-    - name: End play if directory exists
-      meta: end_play
-      when: puppet_env_dir.stat.exists
+#  pre_tasks:
+#    - name: Check puppet env presence
+#      stat:
+#        path="{{puppet_code_dir}}/environments/{{puppet_environment}}"
+#      register: puppet_env_dir
+#    - name: End play if directory exists
+#      meta: end_play
+#      when: puppet_env_dir.stat.exists
   roles:
     - { role: ansible-role-squid, internal_net: "10.99.99.0/24" }
     - { role: ansible-role-puppetmaster, puppetlabs_repo_url: "https://yum.puppetlabs.com/puppetlabs-release-pc1-el-7.noarch.rpm", yum_proxy: "http://puppet-node:3128" }
